# Neon_OLD

./: CMakeLists.txt
inc/glad/glad/: glad.h
lib/GLFW/Windows/x64/: glfw3.lib
src/: glad.c  main.cpp  shader.h  window.h
src/Neon/: Neon.cpp  Neon.h  NeonApp.cpp  NeonApp.h  NeonCommon.h  NeonWindow.cpp  NeonWindow.h
src/Neon/Core/: NeonApp.cpp  NeonApp.h  NeonFile.cpp  NeonFile.h  NeonTime.cpp  NeonTime.h  NeonWindow.cpp  NeonWindow.h
src/Neon/ECS/: NeonEntity.cpp  NeonEntity.h
src/Neon/GraphicsAPI/Shader/: NeonShader.cpp  NeonShader.h
src/Neon/Math/: SBM.h  SBM_Vector2.cpp  SBM_Vector2.h
